add tutorial for global-web-fabric, and some minor cleanups